Articles now have private files | Must implement publishing / redacting of  files, also within markdown. | Custom URL generator for Media Library | Session database | Api Docs
